--- a/docs/components/navbar.html
+++ b/docs/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="fixed w-full flex justify-between items-center p-6 bg-gray-900/70 backdrop-blur-md border-b border-gray-800 z-50">
   <h1 class="text-xl font-bold">Millán Posadas</h1>
   <ul class="flex gap-6">
-    <li><a href="index.html#hero" class="hover:text-blue-400 transition">Inicio</a></li>
-    <li><a href="articulos/index.html" class="hover:text-blue-400 transition">Artículos</a></li>
+    <li><a href="../index.html#hero" class="hover:text-blue-400 transition">Inicio</a></li>
+    <li><a href="../articulos/index.html" class="hover:text-blue-400 transition">Artículos</a></li>
   </ul>
 </nav>
