--- a/docs/components/backgrounds/hero_bg.html
+++ b/docs/components/backgrounds/hero_bg.html
@@ -1,2 +1,2 @@
-<div class="absolute inset-0 -z-10 bg-gradient-to-br from-green-400 via-gray-500 to-emerald-700 animate-gradient"></div>
+<div class="absolute inset-0 -z-10 bg-gradient-to-br from-green-400 via-green-900 to-emerald-700 animate-gradient"></div>
 <div class="absolute inset-0 -z-0 bg-black/25"></div>
