--- a/docs/components/backgrounds/hero_bg.html
+++ b/docs/components/backgrounds/hero_bg.html
@@ -1,2 +1,2 @@
-<div class="absolute inset-0 -z-10 bg-gradient-to-br from-green-800 via-teal-400 to-green-800 animate-gradient"></div>
+<div class="absolute inset-0 -z-10 bg-gradient-to-br from-green-900 via-emerald-200 to-green-900 animate-gradient"></div>
 <div class="absolute inset-0 -z-0 bg-black/25"></div>
