--- a/docs/components/backgrounds/hero_bg.html
+++ b/docs/components/backgrounds/hero_bg.html
@@ -1,2 +1,2 @@
-<div class="absolute inset-0 -z-10 bg-gradient-to-br from-green-600 via-gray-500 to-green-600 sm:from-green-800 sm:via-gray-900 sm:to-green-800 animate-gradient"></div>
-<div class="absolute inset-0 -z-0 bg-black/25"></div>
+<div class="absolute inset-0 w-full h-full -z-10 bg-gradient-to-br from-green-600 via-gray-500 to-green-600 sm:from-green-800 sm:via-gray-900 sm:to-green-800 animate-gradient"></div>
+<div class="absolute inset-0 w-full h-full -z-0 bg-black/25"></div>
