--- a/docs/components/navbar.html
+++ b/docs/components/navbar.html
@@ -2,6 +2,6 @@
   <h1 class="text-xl font-bold">Millán Posadas</h1>
   <ul class="flex gap-6">
     <li><a href="/index.html" class="hover:text-blue-400 transition">Inicio</a></li>
-    <li><a href="/articulos/index.html" class="hover:text-blue-400 transition">Artículos</a></li>
+    <li><a href="/articulos/index.html" class="hover:text-blue-400 transition">Conclusiones</a></li>
   </ul>
 </nav>
